@@ -1,3 +1,8 @@
+2019-11-10  Iain Sandoe  <iain@sandoe.co.uk>
+
+	* config/darwin.h (MACHO_SYMBOL_FLAG_LINKER_VIS): New.
+	(MACHO_SYMBOL_LINKER_VIS_P): New.
+
 2019-11-10  Kwok Cheung Yeung  <kcy@codesourcery.com>
 
 	* lra-spills.c (assign_spill_hard_regs): Do not spill into
